upgrade theory for python 3

--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_4_heritage.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_4_heritage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Ce notebook de David Chamont est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
+    "*Ce notebook est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
    ]
   },
   {
@@ -18,7 +18,7 @@
     }
    },
    "source": [
-    "# Python Devlog - Objets 4/6 : l'héritage entre classes"
+    "# Initiation Python - Objets 4/6 : L'héritage entre classes"
    ]
   },
   {
@@ -42,16 +42,14 @@
     }
    },
    "source": [
-    "Python permet d'exprimer une relation \"est une sorte de\" entre deux classes. Si `B` est une sorte de `A`, on s'attend à ce que les instances de `B` possède les attributs (données et méthodes) de cette classe, mais aussi tous ceux de `A`, puisque ces objets sont aussi une sorte de `A`. On dit que `B` hérite de `A`, ou dérive de `A`. On peut aussi qualifier `A` de \"classe mère\", de \"classe de base\", de \"super-classe\", et `B` de \"classe dérivée\", de \"classe fille\", de \"sous-classe\" de `A`.\n",
+    "Python permet d'exprimer une relation \"est une sorte de\" entre deux classes. Si `B` est une sorte de `A`, on s'attend à ce que les instances de `B` possèdent les attributs (données et méthodes) de cette classe, mais aussi tous ceux de `A`, puisque ces objets sont aussi une sorte de `A`. On dit que `B` hérite de `A`, ou dérive de `A`. On peut aussi qualifier `A` de \"classe mère\", de \"classe de base\", de \"super-classe\", et `B` de \"classe dérivée\", de \"classe fille\", de \"sous-classe\" de `A`.\n",
     "\n",
-    "Pour hériter d'une classe mère, il suffit d’indiquer son nom entre parenthèses après le nom de la classe fille. La classe fille a accès à tous les attributs de la classe mère. En d'autres termes, quand on écrit `obj.x`, l'interpréteur cherche `x` dans l'instance, puis dans sa classe, puis dans la classe mère de cette classe, etc.\n",
-    "\n",
-    "La classe prédéfinie `object` sert de classe de base commune à toutes les classes \"nouveau style\" de Python. Assurez-vous toujours que vos classes héritent d'`object`, directement ou indirectement, sans quoi vous perdrez un grand nombre de fonctionnalités du Python moderne."
+    "Pour hériter d'une classe mère, il suffit d’indiquer son nom entre parenthèses après le nom de la classe fille. La classe fille a accès à tous les attributs de la classe mère. En d'autres termes, quand on écrit `obj.x`, l'interpréteur cherche `x` dans l'instance, puis dans sa classe, puis dans la classe mère de cette classe, etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -69,7 +67,7 @@
     }
    ],
    "source": [
-    "class A(object):\n",
+    "class A:\n",
     "    def x(self): return \"A\"\n",
     "    def y(self): return \"A\"\n",
     "    \n",
@@ -78,7 +76,7 @@
     "    \n",
     "b = B()\n",
     "\n",
-    "print b.x(), b.y(), b.z()"
+    "print(b.x(), b.y(), b.z())"
    ]
   },
   {
@@ -114,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -132,7 +130,7 @@
     }
    ],
    "source": [
-    "class A(object):\n",
+    "class A:\n",
     "    def x(self): return \"A\"\n",
     "    def y(self): return \"A\"\n",
     "    def z(self): return \"A\"\n",
@@ -143,7 +141,7 @@
     "    \n",
     "b = B()\n",
     "\n",
-    "print b.x(), b.y(), b.z(), b.t()"
+    "print(b.x(), b.y(), b.z(), b.t())"
    ]
   },
   {
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -197,17 +195,17 @@
     }
    ],
    "source": [
-    "class A1(object):\n",
+    "class A1:\n",
     "    def x(self): return \"A1\"\n",
     "    \n",
-    "class A2(object):\n",
+    "class A2:\n",
     "    def x(self): return \"A2\"\n",
     "    \n",
-    "class B(A1,A2):\n",
+    "class B(A1, A2):\n",
     "    pass\n",
     "\n",
     "b = B()\n",
-    "print b.x()"
+    "print(b.x())"
    ]
   },
   {
@@ -243,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -261,7 +259,7 @@
     }
    ],
    "source": [
-    "class A(object):\n",
+    "class A:\n",
     "    def x(self): return \"A\"\n",
     "    def y(self): return \"A\"\n",
     "    def z(self): return \"A\"\n",
@@ -272,15 +270,15 @@
     "class B2(A):\n",
     "    def x(self): return \"B2\"\n",
     "    \n",
-    "class C(object):\n",
+    "class C:\n",
     "    def y(self): return \"C\"\n",
     "    def z(self): return \"C\"\n",
     "    \n",
-    "class D(B1,B2,C):\n",
+    "class D(B1, B2, C):\n",
     "    z = C.z\n",
     "\n",
     "d = D()\n",
-    "print d.x(), d.y(), d.z()"
+    "print(d.x(), d.y(), d.z())"
    ]
   },
   {
@@ -330,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -349,10 +347,10 @@
     }
    ],
    "source": [
-    "class A(object):\n",
+    "class A:\n",
     "    def x(self): return \"A\"\n",
     "    def y(self): return \"A\"\n",
-    "    def affichex(self): print self.x()\n",
+    "    def affichex(self): print( self.x() )\n",
     "    \n",
     "class B1(A):\n",
     "    pass\n",
@@ -360,11 +358,11 @@
     "class B2(A):\n",
     "    def x(self): return \"B2\"\n",
     "    \n",
-    "class C(object):\n",
+    "class C:\n",
     "    def x(self): return \"C\"\n",
-    "    def affichey(self): print self.y()\n",
+    "    def affichey(self): print(self.y())\n",
     "    \n",
-    "class D(B1,B2,C):\n",
+    "class D(B1, B2, C):\n",
     "    pass\n",
     "\n",
     "d = D()\n",
@@ -388,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -406,7 +404,7 @@
     "class A:\n",
     "    def __x(self): return \"A\"\n",
     "    def __y(self): return \"A\"\n",
-    "    def affichex(self): print self.__x()\n",
+    "    def affichex(self): print(self.__x())\n",
     "    \n",
     "class B1(A):\n",
     "    pass\n",
@@ -416,9 +414,9 @@
     "    \n",
     "class C:\n",
     "    def __y(self): return \"C\"\n",
-    "    def affichey(self): print self.__y()\n",
+    "    def affichey(self): print(self.__y())\n",
     "    \n",
-    "class D(B1,B2,C):\n",
+    "class D(B1, B2, C):\n",
     "    pass\n",
     "\n",
     "d = D()\n",
@@ -442,7 +440,7 @@
     }
    },
    "source": [
-    "## Reutiliser explicitement une méthode de base"
+    "## Réutiliser explicitement une méthode de base"
    ]
   },
   {
@@ -459,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -472,30 +470,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pomme golden rouge\n"
+      "pomme golden rouge\n",
+      "pomme grany verte\n"
      ]
     }
    ],
    "source": [
-    "class Fruit(object):\n",
+    "class Fruit:\n",
     "    def __init__(self, couleur, variete=''):\n",
-    "        self.__couleur= couleur\n",
-    "        self.__variete= variete\n",
+    "        self.__couleur = couleur\n",
+    "        self.__variete = variete\n",
+    "        \n",
     "    def __str__(self):\n",
     "        if (self.__variete!=''):\n",
-    "            return \"%s %s\" % (self.__variete,self.__couleur)\n",
+    "            return \"{} {}\".format(self.__variete, self.__couleur)\n",
     "        else:\n",
-    "            return \"fruit %s\" % self.__couleur\n",
+    "            return \"fruit {}\".format(self.__couleur)\n",
     "\n",
     "class Pomme(Fruit):\n",
     "    def __init__(self, couleur, variete='golden'):\n",
-    "        Fruit.__init__(self,couleur,variete)\n",
+    "        Fruit.__init__(self, couleur, variete)\n",
+    "        \n",
     "    def __str__(self):\n",
     "        return (\"pomme \" + Fruit.__str__(self))\n",
     "\n",
+    "    \n",
     "p = Pomme('rouge')\n",
-    "\n",
-    "print p"
+    "p2 = Pomme('verte', 'grany')\n",
+    "print(p)\n",
+    "print(p2)"
    ]
   },
   {
@@ -514,12 +517,12 @@
     }
    },
    "source": [
-    "On peut remplacer l'appel explicite à la classe de base par un appel à la fonction prédéfinie `super()`, en lui passant le nom de la classe courante et l'instance courante. Dans le cas d'un héritage simple, cela permet ensuite de revoir les classe de base sans avoir à corriger tous les appels directs aux méthodes de la classe de base."
+    "On peut remplacer l'appel explicite à la classe de base par un appel à la fonction prédéfinie `super()`. Dans le cas d'un héritage simple, cela permet ensuite de revoir les classe de base sans avoir à corriger tous les appels directs aux méthodes de la classe de base."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -539,13 +542,12 @@
    "source": [
     "class Pomme(Fruit):\n",
     "    def __init__(self, couleur, variete='golden'):\n",
-    "        super(Pomme,self).__init__(couleur,variete)\n",
+    "        super().__init__(couleur,variete)\n",
     "    def __str__(self):\n",
-    "        return (\"pomme \" + super(Pomme,self).__str__())\n",
+    "        return (\"pomme \" + super().__str__())\n",
     "\n",
     "p = Pomme('rouge')\n",
-    "\n",
-    "print p"
+    "print(p)"
    ]
   },
   {
@@ -557,12 +559,12 @@
     }
    },
    "source": [
-    "En cas d'héritage multiple, `super()` retourne le parent le plus proche en suivant le chemin habituellement parcouru pour rechercher un attribut (MRO). Ainsi, si les méthodes de même nom s'appellent en chaîne à travers super(), on parcourt l'ensemble de l'arborescence."
+    "En cas d'héritage multiple, `super()` *retourne le parent le plus proche* en suivant le chemin habituellement parcouru pour rechercher un attribut (MRO). Ainsi, si les méthodes de même nom s'appellent en chaîne à travers super(), on parcourt l'ensemble de l'arborescence."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -589,26 +591,26 @@
    "source": [
     "class A(object):\n",
     "    def x(self):\n",
-    "        print\"<A>\"\n",
-    "        print \"</A>\"\n",
+    "        print(\"<A>\")\n",
+    "        print(\"</A>\")\n",
     "    \n",
     "class B1(A):\n",
     "    def x(self):\n",
-    "        print\"<B1>\"\n",
-    "        super(B1,self).x()\n",
-    "        print \"</B1>\"\n",
+    "        print(\"<B1>\")\n",
+    "        super().x()\n",
+    "        print(\"</B1>\")\n",
     "    \n",
     "class B2(A):\n",
     "    def x(self):\n",
-    "        print\"<B2>\"\n",
-    "        super(B2,self).x()\n",
-    "        print \"</B2>\"\n",
+    "        print(\"<B2>\")\n",
+    "        super().x()\n",
+    "        print(\"</B2>\")\n",
     "    \n",
-    "class C(B1,B2):\n",
+    "class C(B1, B2):\n",
     "    def x(self):\n",
-    "        print\"<C>\"\n",
-    "        super(C,self).x()\n",
-    "        print \"</C>\"\n",
+    "        print(\"<C>\")\n",
+    "        super().x()\n",
+    "        print(\"</C>\")\n",
     "\n",
     "c = C()\n",
     "c.x()"
@@ -630,35 +632,57 @@
     }
    },
    "source": [
-    "*PYTHON 3 SEULEMENT : on peut appeler super() sans arguments, ce qui permet notamment de renommer une classe sans avoir à corriger tous les appels à super().*"
+    "*PYTHON 2 : avant 2.2, toutes les classes sont dites de style \"ancien\", avec des règles d'héritage légèrement différentes ; à partir de 2.2, pour qu'une classe soit de style \"nouveau\" (style par défaut de Python 3), il faut que la classe hérite de la classe object, directement ou indirectement.*\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Ce notebook de David Chamont est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.\n",
-    "Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog, avec relectures de Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
+    "*PYTHON 2 : lors de l'apparition de la méthode super(), il fallait lui passer en argument le nom de la classe et de l'objet courants, par exemple dans la fonction x() de la classe C ci-dessus, il fallait appeler super(C,self).x().*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A suivre..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Travaux pratiques](../ellipsoides/synope_objets_4_heritage_tp.ipynb)  \n",
+    "[Persistance](synope_objets_5_persistance.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog.  \n",
+    "Auteur principal : David Chamont. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
