--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_5_persistance.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_5_persistance.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Ce notebook de David Chamont est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
+    "*Ce notebook est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Devlog - Objets 5/6 : sauvegarde et reconstruction d'objets"
+    "# Initiation Python - Objets 5/6 : Sauvegarde et reconstruction d'objets"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "metadata": {},
    "source": [
     "* Ce module est capable de transformer en flot d'octets n'importe quel objet en mémoire. Ces octets peuvent être écrits dans un fichier, envoyés par réseau, etc.\n",
-    "* A l'inverse, le module peut lire et recrée en mémoire les objets d'un fichier, l'un après l'autre.\n",
+    "* À l'inverse, le module peut lire et recréer en mémoire les objets d'un fichier, l'un après l'autre.\n",
     "* Quand c'est disponible, préférez cPickle, écrit en C et plus rapide.\n",
     "* **ATTENTION** : pas de garantie de portabilité de vos données entre des plateformes différentes."
    ]
@@ -68,21 +68,21 @@
     "        self.x = u\n",
     "        self.y = v\n",
     "    def __str__(self):\n",
-    "        return \"(%.0f,%.0f)\" % (self.x,self.y)\n",
+    "        return \"({:.0f},{:.0f})\".format(self.x, self.y)\n",
     "\n",
-    "v1 = Vecteur(1,2)\n",
-    "v2 = Vecteur(3,4)\n",
+    "v1 = Vecteur(1, 2)\n",
+    "v2 = Vecteur(3, 4)\n",
     "\n",
     "import pickle\n",
     "\n",
-    "fw = open('vecteurs.pkl','w')\n",
-    "pickle.dump(v1,fw)\n",
-    "pickle.dump(v2,fw)\n",
+    "fw = open('vecteurs.pkl','wb') # fw = open('vecteurs.pkl','w') en Python2\n",
+    "pickle.dump(v1, fw)\n",
+    "pickle.dump(v2, fw)\n",
     "fw.close()\n",
     "\n",
-    "fr = open('vecteurs.pkl','r')\n",
-    "print pickle.load(fr)\n",
-    "print pickle.load(fr)\n",
+    "fr = open('vecteurs.pkl','rb')\n",
+    "print(pickle.load(fr))\n",
+    "print(pickle.load(fr))\n",
     "fr.close()"
    ]
   },
@@ -90,8 +90,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* [documentation python 2](http://docs.python.org/2.7/library/pickle.html)\n",
-    "* [documentation python 3](http://docs.python.org/3.3/library/pickle.html)"
+    "* [documentation python 3](http://docs.python.org/3.3/library/pickle.html) \n",
+    "* [documentation python 2](http://docs.python.org/2.7/library/pickle.html)"
    ]
   },
   {
@@ -111,18 +111,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['v2', 'v1']\n",
+      "(1,2)\n",
+      "(3,4)\n"
+     ]
+    }
+   ],
    "source": [
     "class Vecteur:\n",
     "    def __init__(self,u=0,v=0):\n",
     "        self.x = u\n",
     "        self.y = v\n",
     "    def __str__(self):\n",
-    "        return \"(%.0f,%.0f)\" % (self.x,self.y)\n",
+    "        return \"({:.0f},{:.0f})\".format(self.x, self.y)\n",
     "\n",
     "import shelve\n",
     "\n",
@@ -134,9 +144,9 @@
     "#...\n",
     "\n",
     "s = shelve.open('vecteurs.db')\n",
-    "print s.keys()\n",
-    "print s['v1']\n",
-    "print s['v2']\n",
+    "print(list(s.keys()))\n",
+    "print(s['v1'])\n",
+    "print(s['v2'])\n",
     "s.close()"
    ]
   },
@@ -144,36 +154,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* [documentation python 2](http://docs.python.org/2.7/library/shelve.html)\n",
-    "* [documentation python 3](http://docs.python.org/3.3/library/shelve.html)"
+    "* [documentation python 3](http://docs.python.org/3.3/library/shelve.html)\n",
+    "* [documentation python 2](http://docs.python.org/2.7/library/shelve.html)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Ce notebook de David Chamont est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.\n",
-    "Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog, avec relectures de Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
+    "## A suivre..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Travaux pratiques](../ellipsoides/synope_objets_5_persistance_tp.ipynb)  \n",
+    "[Compléments](synope_objets_6_complements.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog.  \n",
+    "Auteur principal : David Chamont. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
