--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_1_classes.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_1_classes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Ce notebook de David Chamont est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
+    "*Ce notebook est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
    ]
   },
   {
@@ -20,7 +20,7 @@
     }
    },
    "source": [
-    "# Python Devlog - Objets 1/6 : la définition de classes"
+    "# Initiation Python - Objets 1/6 : La définition de classes"
    ]
   },
   {
@@ -46,7 +46,7 @@
     }
    },
    "source": [
-    "La création d'une nouvelle classe peut être considérée comme la création d'un nouveau type de données, défini par le développeur. Par convention, les noms de classe sont généralement typographiés en \"CamelCase\". Dans l'exemple ci-dessous, l'exécution de l'instruction `class` provoque la création d'un objet de type `class`, et lui assigne comme nom `Vecteur`. Comme n'importe quelle entité de Python, la classe créée est placée dans un module (ici `__main__` puisque l'instruction `class` est soumise directement à l'interpréteur)."
+    "La création d'une nouvelle classe peut être considérée comme la création d'un *nouveau type de données*, défini par le développeur. Par convention, les noms de classe sont généralement typographiés en \"CamelCase\". Dans l'exemple ci-dessous, l'exécution de l'instruction `class` provoque la création d'un objet de type `class`, et lui assigne comme nom `Vecteur`. Comme n'importe quelle entité de Python, la classe créée est placée dans un module (ici `__main__` puisque l'instruction `class` est soumise directement à l'interpréteur)."
    ]
   },
   {
@@ -75,7 +75,7 @@
     "class Vecteur(object):\n",
     "    pass\n",
     "\n",
-    "print Vecteur"
+    "print(Vecteur)"
    ]
   },
   {
@@ -90,7 +90,7 @@
     }
    },
    "source": [
-    "De même qu'un type prédéfini de Python (par exemple `float` ou `list`) possède de multiples valeurs (par exemple `3.14` ou `[]`), une classe peut donner naissance à de multiples objets. On dit de chacun de ces objets qu'il est une \"instance\" de la classe. Pour créer une telle instance, on utilise le nom de la classe comme si c'était un nom de fonction (utilisation de parenthèses). Dans l'exemple ci-dessous, la première instruction provoque la création d'une instance de type `Vecteur`, et lui assigne comme nom `v`. La deuxième instruction crée une deuxième instance nommée `w`."
+    "De même qu'un type prédéfini de Python (par exemple `float` ou `list`) possède de multiples valeurs (par exemple `3.14` ou `[]`), une classe peut donner naissance à de multiples objets. On dit de chacun de ces objets qu'il est une ** *\"instance\"* ** de la classe. Pour créer une telle instance, on utilise le nom de la classe comme si c'était un nom de fonction (utilisation de parenthèses). Dans l'exemple ci-dessous, la première instruction provoque la création d'une instance de type `Vecteur`, et lui assigne comme nom `v`. La deuxième instruction crée une deuxième instance nommée `w`."
    ]
   },
   {
@@ -111,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Vecteur object at 0x103b6a9d0> <__main__.Vecteur object at 0x103b6a590>\n"
+      "<__main__.Vecteur object at 0x10402ccf8> <__main__.Vecteur object at 0x10402ccc0>\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
     "v = Vecteur()\n",
     "w = Vecteur()\n",
     "\n",
-    "print v, w"
+    "print(v, w)"
    ]
   },
   {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -192,12 +192,12 @@
    ],
    "source": [
     "v.x, v.y, v.z = 1, 2, 3\n",
-    "print v.x, v.y, v.z"
+    "print(v.x, v.y, v.z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -212,26 +212,20 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2"
-     ]
-    },
-    {
      "ename": "AttributeError",
      "evalue": "'Vecteur' object has no attribute 'z'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-a2eb95aa3edd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Vecteur' object has no attribute 'z'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-dc6d48684f2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Vecteur' object has no attribute 'z'"
      ]
     }
    ],
    "source": [
     "del v.z\n",
-    "print v.x, v.y, v.z"
+    "print(v.x, v.y, v.z)"
    ]
   },
   {
@@ -274,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -290,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 5.0\n"
+      "5.0\n"
      ]
     }
    ],
@@ -298,7 +292,7 @@
     "class Vecteur(object):\n",
     "    pass\n",
     "    \n",
-    "def init(v,x=0,y=0):\n",
+    "def init(v, x=0, y=0):\n",
     "    v.x = x\n",
     "    v.y = y\n",
     "\n",
@@ -307,21 +301,21 @@
     "    y2 = v.y**2\n",
     "    return (x2+y2)**(1./2.)\n",
     "\n",
-    "def homothetie(v,n):\n",
+    "def homothetie(v, n):\n",
     "    v.x = v.x * n\n",
     "    v.y = v.y * n\n",
     "\n",
     "def affiche(v):\n",
-    "    print v.x, v.y\n",
+    "    print(v.x, v.y)\n",
     "\n",
     "v = Vecteur()\n",
-    "init(v,3,-4)\n",
-    "print norme(v)"
+    "init(v, 3, -4)\n",
+    "print(norme(v))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -344,7 +338,7 @@
     }
    ],
    "source": [
-    "homothetie(v,3)\n",
+    "homothetie(v, 3)\n",
     "affiche(v)"
    ]
   },
@@ -368,7 +362,7 @@
     }
    },
    "source": [
-    "On peut être rapidement confronté à des conflits de noms avec d'autres fonctions similaires pour d'autres classes, et on aimerait que nos nouvelles fonctions ne soient utilisées qu'avec notre nouvelle classe Vecteur. Pour ce faire, nous allons en faire des *méthodes* en les insérant dans la classe.\n",
+    "On peut être rapidement confronté à des conflits de noms avec d'autres fonctions similaires pour d'autres classes, et on aimerait que nos nouvelles fonctions ne soient utilisées qu'avec notre nouvelle classe Vecteur. Pour ce faire, nous allons en faire des ** *méthodes* ** en les insérant dans la classe.\n",
     "\n",
     "Une méthode est une fonction \"attachée\" à une classe particulière. La définition des méthodes est faite à l'intérieur de la définition de la classe.\n",
     "\n",
@@ -377,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -399,28 +393,31 @@
    ],
    "source": [
     "class Vecteur(object):\n",
-    "    def init(self,x=0,y=0):\n",
+    "    def init(self, x=0, y=0):\n",
     "        self.x = x\n",
     "        self.y = y\n",
+    "        \n",
     "    def norme(self):\n",
     "        x2 = self.x**2\n",
     "        y2 = self.y**2\n",
     "        return (x2+y2)**(1./2.)\n",
-    "    def homothetie(self,n):\n",
+    "    \n",
+    "    def homothetie(self, n):\n",
     "        self.x = self.x * n\n",
     "        self.y = self.y * n\n",
+    "        \n",
     "    def affiche(self):\n",
-    "        print self.x, self.y\n",
+    "        print(self.x, self.y)\n",
     "\n",
     "\n",
     "v = Vecteur()\n",
     "v.init(3,-4)\n",
-    "print v.norme()"
+    "print(v.norme())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -433,7 +430,15 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 -12\n"
+     ]
+    }
+   ],
    "source": [
     "v.homothetie(3)\n",
     "v.affiche()"
@@ -474,7 +479,7 @@
     }
    },
    "source": [
-    "Données membres et méthodes sont collectivement appelés \"attributs\". On  place généralement les données dans les instances (et elles varient d'une instance à l'autre), et les méthodes dans la classe.\n",
+    "Données membres et méthodes sont collectivement appelés ** *\"attributs\"* **. On  place généralement les données dans les instances (et elles varient d'une instance à l'autre), et les méthodes dans la classe.\n",
     "\n",
     "En programmation orientée objet orthodoxe, il est préconisé d'interdire un accès direct aux données par les codes clients extérieurs, et de forcer ces clients à passer par l'intermédiaire de méthodes de lecture (qu'on appelle \"getters\") et de méthodes de modification (qu'on appelle \"setters\").\n",
     "\n",
@@ -485,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -508,24 +513,24 @@
    "source": [
     "class Vecteur(object):\n",
     "    \n",
-    "  def init(self,u=0,v=0):\n",
-    "    self.__x = u\n",
-    "    self.__y = v\n",
+    "    def init(self, u=0, v=0):\n",
+    "        self.__x = u\n",
+    "        self.__y = v\n",
     "    \n",
-    "  def getx(self):\n",
-    "    return self.__x\n",
+    "    def getx(self):\n",
+    "        return self.__x\n",
     "\n",
-    "  def gety(self):\n",
-    "    return self.__y\n",
+    "    def gety(self):\n",
+    "        return self.__y\n",
     "\n",
     "v = Vecteur()\n",
     "v.init(3, -4)\n",
-    "print v.getx(), v.gety()"
+    "print(v.getx(), v.gety())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -539,24 +544,26 @@
      "evalue": "'Vecteur' object has no attribute 'x'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-9166e99d7851>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Vecteur' object has no attribute 'x'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-803e9cbb3045>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Vecteur' object has no attribute 'x'"
      ]
     }
    ],
    "source": [
-    "print v.x, v.y"
+    "print(v.x, v.y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "internals": {
      "slide_helper": "subslide_end"
     },
+    "scrolled": true,
     "slide_helper": "slide_end",
     "slideshow": {
      "slide_type": "-"
@@ -568,14 +575,32 @@
      "evalue": "'Vecteur' object has no attribute '__x'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-e70456a59924>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__y\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Vecteur' object has no attribute '__x'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-c47afd86a16b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Vecteur' object has no attribute '__x'"
      ]
     }
    ],
    "source": [
-    "print v.__x, v.__y"
+    "print(v.__x, v.__y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "internals": {
+     "slide_helper": "subslide_end"
+    },
+    "scrolled": true,
+    "slide_helper": "slide_end",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "Néanmoins il est possible d'y accéder en fouillant dans le dictionnaire interne de l'instance."
    ]
   },
   {
@@ -611,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -627,23 +652,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Documentation de MaClasse\n"
+      "Documentation de MaClasse :-)\n"
      ]
     }
    ],
    "source": [
     "class MaClasse(object):\n",
-    "    \"Documentation de MaClasse\"\n",
+    "    \"Documentation de MaClasse :-)\"\n",
     "    def ma_methode():\n",
     "        \"documentation de ma_methode()\"\n",
     "        pass\n",
     "    \n",
-    "print MaClasse.__doc__"
+    "print(MaClasse.__doc__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -664,12 +689,12 @@
     }
    ],
    "source": [
-    "print MaClasse.ma_methode.__doc__"
+    "print(MaClasse.ma_methode.__doc__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -690,8 +715,8 @@
      "text": [
       "Help on class MaClasse in module __main__:\n",
       "\n",
-      "class MaClasse(__builtin__.object)\n",
-      " |  Documentation de MaClasse\n",
+      "class MaClasse(builtins.object)\n",
+      " |  Documentation de MaClasse :-)\n",
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
@@ -718,28 +743,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Ce notebook de David Chamont est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.\n",
-    "Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog, avec relectures de Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
+    "## A suivre..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Travaux pratiques](../ellipsoides/synope_objets_1_classes_tp.ipynb)  \n",
+    "[Méthodes spéciales](synope_objets_2_methodes_speciales.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog.  \n",
+    "Auteur principal : David Chamont. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
