--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_2_methodes_speciales.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_2_methodes_speciales.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Ce notebook de David Chamont est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
+    "*Ce notebook est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
    ]
   },
   {
@@ -18,7 +18,7 @@
     }
    },
    "source": [
-    "# Python Devlog - Objets 2/6 : les méthodes spéciales"
+    "# Initiation Python - Objets 2/6 : Les méthodes spéciales"
    ]
   },
   {
@@ -42,9 +42,9 @@
     }
    },
    "source": [
-    "Le constructeur est une méthode spéciale, appelée `__init__()`, qui est appelée lors de la création d'une instance de classe.\n",
-    "\n",
-    "Le destructeur est une méthode spéciale, appelée `__del__()`, qui est appelée lors de la destruction d'une instance. **ATTENTION** : on ne contrôle pas vraiment le moment ou le destructeur est appelé. De ce fait, il est rarement utilisé."
+    "Le constructeur est une méthode spéciale, appelée **`__init__()`**, qui est appelée lors de la création d'une instance de classe.\n",
+    "Le destructeur est une méthode spéciale, appelée **`__del__()`**, qui est appelée lors de la destruction d'une instance.\n",
+    "**`ATTENTION`** : on ne contrôle pas vraiment le moment ou le destructeur est appelé. De ce fait, il est rarement utilisé."
    ]
   },
   {
@@ -68,25 +68,29 @@
    ],
    "source": [
     "class Vecteur(object):\n",
-    "  def __init__(self,u=0,v=0):\n",
-    "    self.__x = u\n",
-    "    self.__y = v\n",
-    "  def getx(self):\n",
-    "    return self.__x\n",
-    "  def gety(self):\n",
-    "    return self.__y\n",
-    "  def norm(self):\n",
-    "    x2 = self.__x**2\n",
-    "    y2 = self.__y**2\n",
-    "    return (x2+ y2)**(1/2)\n",
+    "    # Notez la différence avec C++, Java ou PHP sur la déclaration de attributs\n",
+    "    def __init__(self, u=0, v=0):\n",
+    "        self.__x = u\n",
+    "        self.__y = v\n",
+    "    \n",
+    "    def getx(self):\n",
+    "        return self.__x\n",
+    "\n",
+    "    def gety(self):        \n",
+    "        return self.__y\n",
+    "\n",
+    "    def norm(self):\n",
+    "        x2 = self.__x**2\n",
+    "        y2 = self.__y**2\n",
+    "        return (x2+ y2)**(1/2)\n",
     "\n",
     "v1 = Vecteur(3, 4)\n",
-    "print v1.getx(), v1.gety()"
+    "print(v1.getx(), v1.gety())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -94,10 +98,18 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2 7\n"
+     ]
+    }
+   ],
    "source": [
     "v2 = Vecteur(-2, 7)\n",
-    "print v2.getx(), v2.gety()"
+    "print( v2.getx(), v2.gety() )"
    ]
   },
   {
@@ -126,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -134,29 +146,20 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Vecteur object at 0x0000000003D01A20>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vecteur(object):\n",
-    "  def __init__(self,u=0,v=0):\n",
-    "    self.__x = u\n",
-    "    self.__y = v\n",
+    "    def __init__(self,u=0,v=0):\n",
+    "        self.__x = u\n",
+    "        self.__y = v\n",
     "\n",
     "v = Vecteur(3,4)\n",
-    "\n",
-    "print v"
+    "print(v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -164,18 +167,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Vecteur at 0x3d01a20>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "v"
    ]
@@ -194,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -213,22 +205,24 @@
    ],
    "source": [
     "class Vecteur(object):\n",
-    "  def __init__(self,u=0,v=0):\n",
-    "    self.__x = u\n",
-    "    self.__y = v\n",
-    "  def __str__(self):\n",
-    "    return \"(%.0f,%.0f)\" % (self.__x,self.__y)\n",
-    "  def __repr__(self):\n",
-    "    return \"Vecteur(%.0f,%.0f)\" % (self.__x,self.__y)\n",
+    "    def __init__(self, u=0, v=0):\n",
+    "        self.__x = u\n",
+    "        self.__y = v\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return \"({:.0f},{:.0f})\".format(self.__x, self.__y)\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return \"Vecteur({:.0f},{:.0f})\".format(self.__x, self.__y)\n",
     "\n",
-    "v = Vecteur(3,4)\n",
-    "\n",
-    "print v"
+    "    \n",
+    "v = Vecteur(3, 4)\n",
+    "print(v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -236,18 +230,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Vecteur(3,4)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "v"
    ]
@@ -285,12 +268,12 @@
     }
    },
    "source": [
-    "En dotant une classe de la méthode `__call__`, les instances de cette classe peuvent être utilisés comme des fonctions. On parle d'objets-fonctions. Cela peut-être utile lorsqu'on veut utiliser un programme générique qui attend une fonction en paramètre, et que l'on veut lui donner à la place des objets qui savent se comporter en fonction, tout en ayant des paramètres internes."
+    "En dotant une classe de la méthode `__call__`, les instances de cette classe peuvent être utilisées comme des fonctions. On parle d'objets-fonctions. Cela peut-être utile lorsqu'on veut utiliser un programme générique qui attend une fonction en paramètre, et que l'on veut lui donner à la place des objets qui savent se comporter en fonction, tout en ayant des paramètres internes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -310,14 +293,14 @@
    ],
    "source": [
     "class FonctionLineaire(object):\n",
-    "    def __init__(self,constant):\n",
-    "        self.constant = constant\n",
-    "    def __call__(self,other):\n",
-    "        return self.constant*other\n",
+    "    def __init__(self, constant):\n",
+    "        self.constant = constant    \n",
+    "    def __call__(self, other):\n",
+    "        return self.constant * other\n",
     "    \n",
     "fois2 = FonctionLineaire(2)\n",
-    "print fois2(6)\n",
-    "print map(fois2,[1,2,3,4,5])"
+    "print(fois2(6))\n",
+    "print(list(map(fois2,[1,2,3,4,5])))"
    ]
   },
   {
@@ -329,7 +312,7 @@
     }
    },
    "source": [
-    "Ce mécanisme est souvent le plus sain pour associer des données persistantes à une fonction, plutôt que l'utilisation de variables globales, de fonctions imbriquées, ou de valeurs par défaut modifiables."
+    "Ce mécanisme est souvent le plus sain pour associer des données persistantes à une fonction, plutôt que l'utilisation de variables globales, de fonctions imbriquées, ou de valeurs par défaut modifiables. (Notion de *Closure*)"
    ]
   },
   {
@@ -366,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -385,22 +368,24 @@
    ],
    "source": [
     "class Vecteur(object):\n",
-    "  def __init__(self,u=0,v=0):\n",
-    "    self.__x = u\n",
-    "    self.__y = v\n",
-    "  def __add__(self, other):\n",
-    "    if isinstance(other, Vecteur):\n",
-    "      newx = self.__x + other.__x\n",
-    "      newy = self.__y + other.__y\n",
-    "      return Vecteur(newx, newy)\n",
-    "  def __str__(self):\n",
-    "    return \"(%.0f,%.0f)\" % (self.__x,self.__y)\n",
+    "    def __init__(self,u=0,v=0):\n",
+    "        self.__x = u\n",
+    "        self.__y = v\n",
+    "        \n",
+    "    def __add__(self, other):\n",
+    "        if isinstance(other, Vecteur):\n",
+    "          newx = self.__x + other.__x\n",
+    "          newy = self.__y + other.__y\n",
+    "          return Vecteur(newx, newy)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"({:.0f},{:.0f})\".format(self.__x, self.__y)\n",
     "\n",
     "v1 = Vecteur(2, 3)\n",
     "v2 = Vecteur(-4, 7)\n",
     "v3 = v1 + v2\n",
     "\n",
-    "print v3"
+    "print(v3)"
    ]
   },
   {
@@ -424,12 +409,12 @@
     }
    },
    "source": [
-    "A l'aide de la méthode `__getitem__()`, on peut implémenter l'opérateur `[]` sous toutes ses formes :"
+    "À l'aide de la méthode `__getitem__()`, on peut implémenter l'opérateur `[]` sous toutes ses formes :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -450,16 +435,18 @@
     "class MonTexte(object):\n",
     "    def __init__(self,value):\n",
     "        self.data = value\n",
-    "    def __getitem__(self,index):\n",
-    "        return self.data[index]\n",
     "        \n",
+    "    def __getitem__(self, index):\n",
+    "        return self.data[index]\n",
+    "\n",
+    "    \n",
     "txt = MonTexte(\"Bonjour\")\n",
-    "print txt[2]"
+    "print(txt[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -473,7 +460,7 @@
     }
    ],
    "source": [
-    "print txt[-1::-1]"
+    "print(txt[::-1])"
    ]
   },
   {
@@ -485,20 +472,37 @@
     }
    },
    "source": [
-    "En bonus, la présence de `__getitem__` permet d'utiliser un objet au sein d'une boucle `for`. L'interpréteur va invoquer cette méthode avec des valeurs entières croissantes, en commencant par `0`, et jsuqu'à l'émission d'une exception `IndexError`."
+    "En bonus, la présence de `__getitem__` permet d'utiliser un objet au sein d'une boucle `for`. L'interpréteur va invoquer cette méthode avec des valeurs entières croissantes, en commencant par `0`, et ce jusqu'à l'émission d'une exception `IndexError`."
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
+    "collapsed": false,
     "internals": {},
     "slideshow": {
      "slide_type": "-"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B\n",
+      "o\n",
+      "n\n",
+      "j\n",
+      "o\n",
+      "u\n",
+      "r\n"
+     ]
+    }
+   ],
    "source": [
     "for c in txt:\n",
-    "    print c"
+    "    print(c)"
    ]
   },
   {
@@ -515,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -530,7 +534,7 @@
        "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -556,39 +560,13 @@
        "['B', 'o', 'n', 'j', 'o', 'u', 'r']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "[c for c in txt]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false,
-    "internals": {},
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[66, 111, 110, 106, 111, 117, 114]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "map(ord,txt)"
    ]
   },
   {
@@ -605,10 +583,36 @@
     {
      "data": {
       "text/plain": [
-       "('n', 'o', 'B')"
+       "[66, 111, 110, 106, 111, 117, 114]"
       ]
      },
      "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(ord, txt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "internals": {},
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('n', 'o', 'B')"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -637,7 +641,7 @@
        " 'B-o-n-j-o-u-r')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,32 +652,47 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A suivre..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
    "source": [
-    "*Ce notebook de David Chamont est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.\n",
-    "Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog, avec relectures de Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
+    "[Travaux pratiques](../ellipsoides/synope_objets_2_methodes_speciales_tp.ipynb)  \n",
+    "[Composition](synope_objets_3_composition.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog.  \n",
+    "Auteur principal : David Chamont. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
