--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_3_composition.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_3_composition.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Ce notebook de David Chamont est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
+    "*Ce notebook est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
    ]
   },
   {
@@ -18,7 +18,7 @@
     }
    },
    "source": [
-    "# Python Devlog - Objets 3/6 : les objets composés"
+    "# Initiation Python - Objets 3/6 : Les objets composés"
    ]
   },
   {
@@ -43,12 +43,12 @@
    },
    "source": [
     "Un objet peut contenir des objets, qui peuvent contenir des objets, qui…\n",
-    "On peut descendre dans les niveaux successifs en enchainant les \".\" ."
+    "On peut descendre dans les niveaux successifs en enchaînant les \".\" ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1.0, 0.0, 0.0, 10.0)\n"
+      "1.0 0.0 0.0 10.0\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
     "imp.vitesse.z = 0.\n",
     "imp.masse = 10.\n",
     "\n",
-    "print ( imp.vitesse.x, imp.vitesse.y, imp.vitesse.z, imp.masse )"
+    "print(imp.vitesse.x, imp.vitesse.y, imp.vitesse.z, imp.masse)"
    ]
   },
   {
@@ -95,7 +95,7 @@
     }
    },
    "source": [
-    "## (Non)Chainage des constructeurs"
+    "## (Non)Chaînage des constructeurs"
    ]
   },
   {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -136,17 +136,17 @@
     "        self.y = 0\n",
     "        self.z = 0\n",
     "    def __str__(self):\n",
-    "        return \"%d|%d|%d\" % ( self.x, self.y, self.z )\n",
+    "        return \"{:d}|{:d}|{:d}\".format(self.x, self.y, self.z)\n",
     "        \n",
     "class Impulsion(object):\n",
     "    def __init__(self):\n",
     "        self.vitesse = Vecteur()\n",
     "        self.masse = 0\n",
     "    def __str__(self):\n",
-    "        return \"%s|%d\" % ( self.vitesse.__str__(), self.masse )\n",
+    "        return \"{}|{:d}\".format(self.vitesse.__str__(), self.masse)\n",
     "\n",
     "i1 = Impulsion()\n",
-    "print \"(%s)\" % i1"
+    "print(\"({})\".format(i1))"
    ]
   },
   {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -214,7 +214,7 @@
    "source": [
     "i2 = i1\n",
     "i2.masse = 1\n",
-    "print \"(%s), (%s)\" % ( i2, i1 )"
+    "print(\"({}), ({})\".format(i2, i1))"
    ]
   },
   {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -259,7 +259,7 @@
     "import copy\n",
     "i2 = copy.copy(i1)\n",
     "i2.masse = 2\n",
-    "print \"(%s), (%s)\" % ( i2, i1 )"
+    "print(\"({}), ({})\".format(i2, i1))"
    ]
   },
   {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -298,7 +298,7 @@
     "i2.vitesse = i1.vitesse # i2 = copy.copy(i1)\n",
     "i2.masse = i1.masse     # i2 = copy.copy(i1)\n",
     "i2.masse = 2\n",
-    "print \"(%s), (%s)\" % ( i2, i1 )"
+    "print(\"({}), ({})\".format(i2, i1))"
    ]
   },
   {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -341,7 +341,7 @@
    ],
    "source": [
     "i2.vitesse.z = 2\n",
-    "print \"(%s), (%s)\" % ( i2, i1 )"
+    "print(\"({}), ({})\".format(i2, i1))"
    ]
   },
   {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -378,7 +378,7 @@
    "source": [
     "i2 = copy.deepcopy(i1)\n",
     "i2.vitesse.y = 3\n",
-    "print \"(%s), (%s)\" % ( i2, i1 )"
+    "print(\"({}), ({})\".format(i2, i1))"
    ]
   },
   {
@@ -397,7 +397,7 @@
     }
    },
    "source": [
-    "## Egalité et identité"
+    "## Égalité et identité"
    ]
   },
   {
@@ -409,51 +409,7 @@
     }
    },
    "source": [
-    "Malheureusement, à la différence d'un dictionnaire, l'opérateur de comparaison `==` n'est pas capable de vérifier récursivement l'égalité de tous les données membres de l'objet. A la place, il se contente de vérifier que les deux variables désignent le même objet, à la façon d'un `is`. Pour obtenir le comportement \"logique\", il faut par exemple redéfinir les opérateurs `__eq__`et `__ne__` à tous les niveaux :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false,
-    "internals": {},
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(False, False, True)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class Vecteur(object):\n",
-    "    def __init__(self,x=0,y=0,z=0):\n",
-    "        self.__x, self.__y, self.__z = x, y, z\n",
-    "    def __str__(self):\n",
-    "        return \"%d|%d|%d\" % ( self.__x, self.__y, self.__z )\n",
-    "        \n",
-    "class Impulsion(object):\n",
-    "    def __init__(self,x=0,y=0,z=0,m=0):\n",
-    "        self.__vitesse = Vecteur(x,y,z)\n",
-    "        self.__masse = m\n",
-    "    def __str__(self):\n",
-    "        return \"%s|%d\" % ( self.__vitesse.__str__(), self.__masse )\n",
-    "\n",
-    "i1 = Impulsion(1,2,3,4)\n",
-    "\n",
-    "import copy\n",
-    "i2 = copy.deepcopy(i1)\n",
-    "\n",
-    "(i1 is i2, i1==i2, i1!=i2)"
+    "Malheureusement, à la différence d'un dictionnaire, l'opérateur de comparaison `==` n'est pas capable de vérifier récursivement l'égalité de tous les données membres de l'objet. À la place, il se contente de vérifier que les deux variables désignent le même objet, à la façon d'un `is`. Pour obtenir le comportement \"logique\", il faut par exemple redéfinir l' opérateurs `__eq__` à tous les niveaux :"
    ]
   },
   {
@@ -470,7 +426,7 @@
     {
      "data": {
       "text/plain": [
-       "(False, True, True)"
+       "(False, False, True)"
       ]
      },
      "execution_count": 14,
@@ -480,23 +436,13 @@
    ],
    "source": [
     "class Vecteur(object):\n",
-    "    def __init__(self,x=0,y=0,z=0):\n",
-    "        self.__x = x\n",
-    "        self.__y = y\n",
-    "        self.__z = z\n",
-    "    def __str__(self):\n",
-    "        return \"%d|%d|%d\" % ( self.__x, self.__y, self.__z )\n",
-    "    def __eq__(self,other):\n",
-    "        return ( self.__x==other.__x ) and ( self.__y==other.__y ) and ( self.__z==other.__z )\n",
+    "    def __init__(self, x=0, y=0, z=0):\n",
+    "        self.__x, self.__y, self.__z = x, y, z\n",
     "        \n",
     "class Impulsion(object):\n",
-    "    def __init__(self,x=0,y=0,z=0,m=0):\n",
+    "    def __init__(self, x=0, y=0, z=0, m=0):\n",
     "        self.__vitesse = Vecteur(x,y,z)\n",
     "        self.__masse = m\n",
-    "    def __str__(self):\n",
-    "        return \"%s|%d\" % ( self.__vitesse.__str__(), self.__masse )\n",
-    "    def __eq__(self,other): \n",
-    "        return ( self.__vitesse==other.__vitesse ) and ( self.__masse==other.__masse )\n",
     "\n",
     "i1 = Impulsion(1,2,3,4)\n",
     "\n",
@@ -508,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "internals": {},
@@ -523,32 +469,24 @@
        "(False, True, False)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class Vecteur:\n",
-    "    def __init__(self,x=0,y=0,z=0):\n",
-    "        self.__x = x\n",
-    "        self.__y = y\n",
-    "        self.__z = z\n",
-    "    def __str__(self):\n",
-    "        return \"%d|%d|%d\" % ( self.__x, self.__y, self.__z )\n",
+    "class Vecteur(object):\n",
+    "    def __init__(self, x=0, y=0, z=0):\n",
+    "        self.__x, self.__y, self.__z = x, y, z\n",
     "    def __eq__(self,other):\n",
     "        return ( self.__x==other.__x ) and ( self.__y==other.__y ) and ( self.__z==other.__z )\n",
-    "    def __ne__(self,other): return not(self==other)\n",
     "        \n",
-    "class Impulsion:\n",
+    "class Impulsion(object):\n",
     "    def __init__(self,x=0,y=0,z=0,m=0):\n",
     "        self.__vitesse = Vecteur(x,y,z)\n",
     "        self.__masse = m\n",
-    "    def __str__(self):\n",
-    "        return \"%s|%d\" % ( self.__vitesse.__str__(), self.__masse )\n",
     "    def __eq__(self,other): \n",
     "        return ( self.__vitesse==other.__vitesse ) and ( self.__masse==other.__masse )\n",
-    "    def __ne__(self,other): return not(self==other)\n",
     "\n",
     "i1 = Impulsion(1,2,3,4)\n",
     "\n",
@@ -562,28 +500,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Ce notebook de David Chamont est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.\n",
-    "Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog, avec relectures de Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
+    "## A suivre..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Travaux pratiques](../ellipsoides/synope_objets_3_composition_tp.ipynb)  \n",
+    "[Héritage](synope_objets_4_heritage.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog.  \n",
+    "Auteur principal : David Chamont. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
