--- a/python/session-2016-03-idf/2_modules/theorie/Modules.ipynb
+++ b/python/session-2016-03-idf/2_modules/theorie/Modules.ipynb
@@ -496,7 +496,7 @@
    "source": [
     "\n",
     "Les packages python sont des espaces de noms python pouvant contenir d'autres packages et modules.\n",
-    "Concraitement c'est une arboressance de repertoires devant respecter certaines règles : \n",
+    "Concrètement c'est une arboressance de repertoires devant respecter certaines règles : \n",
     "\n",
     "* Chaque package est un repertoire qui doit contenir un fichier python spécial nommé ```__init__.py```. Sans ce fichier, le repertoire ne sera pas reconu comme un package python.\n",
     "* Le fichier ```__init__.py``` peut être vide ou contenir du code d'initialisation. On peut ici en particulier instancier la variable ```__all__```.\n",
