--- a/python/session-2016-03-idf/2_modules/theorie/Modules.ipynb
+++ b/python/session-2016-03-idf/2_modules/theorie/Modules.ipynb
@@ -620,7 +620,7 @@
     "```\n",
     "ou bien :\n",
     "```python\n",
-    "   from exportation import pdf # import du module pdf de notre package traitement\n",
+    "   from ..exportation import pdf # import du module pdf de notre package traitement\n",
     "```\n",
     "\n",
     "####Mot clé as\n",
