ajustements divers, ajout pour memoire des TPs calculatrice

--- a/python/session-2016-03-idf/3_objets/calculatrice/synope_objets_calculatrice.ipynb
+++ b/python/session-2016-03-idf/3_objets/calculatrice/synope_objets_calculatrice.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initiation Python - Objets TP : ellipsoides"
+    "# Initiation Python - Objets TP : calculatrice"
    ]
   },
   {
@@ -200,7 +200,7 @@
     "collapsed": false
    },
    "source": [
-    "*Auteurs : Loic Gouarin et David Chamont. Document réalisé en 2016 dans le cadre d'une série de formations Python organisées par les réseaux LoOPS et PiCo en collaboration avec le pôle formation du SMUT CNRS.*"
+    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog. Auteur principal : David Chamont. Contribution à la mise à jour pour Python 3 : Fabrice Mendes. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
    ]
   }
  ],
