--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_2_methodes_speciales.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_2_methodes_speciales.ipynb
@@ -663,7 +663,7 @@
     "collapsed": false
    },
    "source": [
-    "[Travaux pratiques](../ellipsoides/synope_objets_2_methodes_speciales_tp.ipynb)  \n",
+    "[Travaux pratiques](../calculatrice/synope_objets_calculatrice.ipynb#2/6-:-Les-m%C3%A9thodes-sp%C3%A9ciales)  \n",
     "[Composition](synope_objets_3_composition.ipynb)"
    ]
   },
@@ -671,8 +671,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog.  \n",
-    "Auteur principal : David Chamont. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
+    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog. Auteur principal : David Chamont. Contribution à la mise à jour pour Python 3 : Fabrice Mendes. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
    ]
   }
  ],
