--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_3_composition.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_3_composition.ipynb
@@ -507,7 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Travaux pratiques](../ellipsoides/synope_objets_3_composition_tp.ipynb)  \n",
+    "[Travaux pratiques](../calculatrice/synope_objets_calculatrice.ipynb#3/6-:-Les-objets-compos%C3%A9s)  \n",
     "[Héritage](synope_objets_4_heritage.ipynb)"
    ]
   },
@@ -515,8 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog.  \n",
-    "Auteur principal : David Chamont. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
+    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog. Auteur principal : David Chamont. Contribution à la mise à jour pour Python 3 : Fabrice Mendes. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
    ]
   }
  ],
