--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_1_classes.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_1_classes.ipynb
@@ -750,7 +750,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Travaux pratiques](../ellipsoides/synope_objets_1_classes_tp.ipynb)  \n",
+    "[Travaux pratiques](../calculatrice/synope_objets_calculatrice.ipynb#1/6-:-La-d%C3%A9finition-de-classes)  \n",
     "[Méthodes spéciales](synope_objets_2_methodes_speciales.ipynb)"
    ]
   },
@@ -758,8 +758,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog.  \n",
-    "Auteur principal : David Chamont. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
+    "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog. Auteur principal : David Chamont. Contribution à la mise à jour pour Python 3 : Fabrice Mendes. Relecteurs : Nicolas Can, Sekou Diakite, Loic Gouarin et Christophe Halgand.*"
    ]
   }
  ],
