modification des liens depuis la theorie vers les sectiosn correspondantes d'un fichier unique pour les travaux pratiques ellipsoides

--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_1_classes.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_1_classes.ipynb
@@ -750,7 +750,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Travaux pratiques](../ellipsoides/synope_objets_1_classes_tp.ipynb)  \n",
+    "[Travaux pratiques](../ellipsoides/synope_objets_ellipsoides.ipynb#1/6-:-La-d%C3%A9finition-de-classes)  \n",
     "[Méthodes spéciales](synope_objets_2_methodes_speciales.ipynb)"
    ]
   },
