--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_6_complements.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_6_complements.ipynb
@@ -1617,7 +1617,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Travaux pratiques](../ellipsoides/synope_objets_6_complements_tp.ipynb)  "
+    "[Travaux pratiques](../ellipsoides/synope_objets_ellipsoides.ipynb#6/6-:-Quelques-concepts-avanc%C3%A9s)  "
    ]
   },
   {
