--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_2_methodes_speciales.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_2_methodes_speciales.ipynb
@@ -663,7 +663,7 @@
     "collapsed": false
    },
    "source": [
-    "[Travaux pratiques](../ellipsoides/synope_objets_2_methodes_speciales_tp.ipynb)  \n",
+    "[Travaux pratiques](../ellipsoides/synope_objets_ellipsoides.ipynb#2/6-:-Les-m%C3%A9thodes-sp%C3%A9ciales)  \n",
     "[Composition](synope_objets_3_composition.ipynb)"
    ]
   },
@@ -692,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
