--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_3_composition.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_3_composition.ipynb
@@ -507,7 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Travaux pratiques](../ellipsoides/synope_objets_3_composition_tp.ipynb)  \n",
+    "[Travaux pratiques](../ellipsoides/synope_objets_ellipsoides.ipynb#3/6-:-Les-objets-compos%C3%A9s)  \n",
     "[Héritage](synope_objets_4_heritage.ipynb)"
    ]
   },
@@ -536,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
