--- a/python/session-2016-03-idf/3_objets/theorie/synope_objets_5_persistance.ipynb
+++ b/python/session-2016-03-idf/3_objets/theorie/synope_objets_5_persistance.ipynb
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Travaux pratiques](../ellipsoides/synope_objets_5_persistance_tp.ipynb)  \n",
+    "[Travaux pratiques](../ellipsoides/synope_objets_ellipsoides.ipynb#5/6-:-Sauvegarde-et-reconstruction-d%27objets)  \n",
     "[Compléments](synope_objets_6_complements.ipynb)"
    ]
   },
@@ -198,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
