--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_session_2016_03_idf-TP1.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_session_2016_03_idf-TP1.ipynb
@@ -77,6 +77,10 @@
    "source": [
     "## Travaux pratiques 1: vos premières fonctions\n",
     "\n",
+    "\n",
+    "### Superellipse et superellipsoid\n",
+    "\n",
+    "\n",
     "1. Ecrivez une fonction qui renvoie les coordonnées de la superellipse (courbe de Lamé, https://fr.wikipedia.org/wiki/Courbe_de_Lamé). \n",
     "\n",
     "Les paramètres d'entrée:\n",
@@ -85,13 +89,14 @@
     "* ry : rayon suivant y\n",
     "* m : puissance dans l'expression de la superellipse.\n",
     "\n",
-    "Les paramètres de sortie:\n",
-    "Une liste des coordonnées de la superellipse.\n",
+    "Paramètre de sortie:\n",
+    "* Une liste des coordonnées de la superellipse.\n",
     "\n",
     "Ecrivez une fonction intermédiaire *linspace* qui prend en entrée 3 arguments *a*, *b*, *n* et renvoie la liste de taille *n* des points de discrétisation sur l'intervalle [a,b]. \n",
     "\n",
     "\n",
-    "2. Ecrivez une fonction qui renvoie les coordonnées de la superellipsoid (https://en.wikipedia.org/wiki/Superellipsoid)\n",
+    "\n",
+    "2. Ecrivez une fonction qui renvoie les coordonnées de la superellipsoid (https://en.wikipedia.org/wiki/Superellipsoid). Une superellipsoide est obtenu à partir d'un produit sphérique de 2 superellipses (http://www.cs.mcgill.ca/~dudek/SQ/spherical_products.html) \n",
     "\n",
     "Paramètres d'entrée:\n",
     "\n",
@@ -99,10 +104,37 @@
     "* rx : rayon suivant x\n",
     "* ry : rayon suivant y\n",
     "* rz : rayon suivant z\n",
-    "* m1, m2 : puissances dans l'expression de la superellipsoid.\n",
+    "* m1 : puissance dans l'expression de la superellipse\n",
+    "* m2 : paramètre qui détérmine le \"balayage\" vertical \n",
     "\n",
     "Paramètres de sortie :\n",
-    "une liste des coordonnées de la superellipsoid.\n"
+    "* une liste des coordonnées de la superellipsoid.\n",
+    "\n",
+    "### Rotations: quaternion et représentation complexe\n",
+    "\n",
+    "\n",
+    "1. Ecrivez une fonction qui effectue une rotation 3D à l'aide d'une représentation *quaternion* : https://fr.wikipedia.org/wiki/Quaternions_et_rotation_dans_l'espace \n",
+    "\n",
+    "Paramètres d'entrée:\n",
+    "* angle : radians\n",
+    "* axe : axe de rotation (liste de taille 3)\n",
+    "* pos : point à faire tourner (liste de taille 3)\n",
+    "       \n",
+    "Paramètres de sortie :       \n",
+    "* la position tournée (liste de taille 3)      \n",
+    "       \n",
+    "       \n",
+    "       \n",
+    "2. Ecrivez une fonction qui effectue une rotation 2D d'une position à l'aide d'une représentation complexe.\n",
+    "\n",
+    "Paramètres d'entrée:\n",
+    "\n",
+    "* angle: radians\n",
+    "* pos : point à faire tourner (liste de taille 2)\n",
+    "       \n",
+    "Paramètres de sortie :       \n",
+    "\n",
+    "* la position tournée (liste de taille 2)\n"
    ]
   }
  ],
