Enonce TP2 ; update enonce TP1

--- a/python/session-2016-03-idf/2_modules/exercices/synope_session_2016_03_idf-TP2.ipynb
+++ b/python/session-2016-03-idf/2_modules/exercices/synope_session_2016_03_idf-TP2.ipynb
@@ -75,73 +75,33 @@
     }
    },
    "source": [
-    "## Travaux pratiques 1: vos premières fonctions\n",
-    "\n",
-    "\n",
-    "### Superellipse et superellipsoid\n",
-    "\n",
-    "\n",
-    "1: Ecrivez une fonction qui renvoie les coordonnées de la superellipse (courbe de Lamé, https://fr.wikipedia.org/wiki/Courbe_de_Lamé). \n",
-    "\n",
-    "Les paramètres d'entrée:\n",
-    "* n : nombre de points de discrétisation en theta\n",
-    "* rx : rayon suivant x\n",
-    "* ry : rayon suivant y\n",
-    "* m : puissance dans l'expression de la superellipse.\n",
-    "\n",
-    "Paramètre de sortie:\n",
-    "* Une liste des coordonnées de la superellipse.\n",
-    "\n",
-    "Ecrivez les fonctions intermédiaires:\n",
-    "\n",
-    "* *linspace* qui prend en entrée 3 arguments *a*, *b*, *n* et renvoie la liste de taille *n* des points de discrétisation sur l'intervalle [a,b]. \n",
-    "\n",
-    "* $c(\\theta, m) = sign(\\cos(\\theta), |\\cos(\\theta)|^m )$\n",
-    "\n",
-    "* $s(\\theta, m) = sign(\\sin(\\theta), |\\sin(\\theta)|^m )$\n",
+    "## Travaux pratiques 2: packages et modules\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "2: Ecrivez une fonction qui renvoie les coordonnées de la superellipsoid (https://en.wikipedia.org/wiki/Superellipsoid). Une superellipsoide est obtenu à partir d'un produit sphérique de 2 superellipses (http://www.cs.mcgill.ca/~dudek/SQ/spherical_products.html) \n",
-    "\n",
-    "Paramètres d'entrée:\n",
-    "\n",
-    "* n : nombre de points de discrétisation en theta et en phi\n",
-    "* rx : rayon suivant x\n",
-    "* ry : rayon suivant y\n",
-    "* rz : rayon suivant z\n",
-    "* m1 : puissance dans l'expression de la superellipse\n",
-    "* m2 : paramètre qui détérmine le \"balayage\" vertical \n",
-    "\n",
-    "Paramètres de sortie :\n",
-    "* une liste des coordonnées de la superellipsoid.\n",
-    "\n",
-    "### Rotations: quaternion et représentation complexe\n",
+    " 1: Créez le package *maBiblio* qui contient les modules *quaternion*, *linspace* et *utils*. \n",
     "\n",
     "\n",
-    "1: Ecrivez une fonction qui effectue une rotation 3D à l'aide d'une représentation *quaternion* : https://fr.wikipedia.org/wiki/Quaternions_et_rotation_dans_l'espace \n",
+    " * *quaternion*: contient les fonctions de rotation définies dans le TP1\n",
     "\n",
-    "Paramètres d'entrée:\n",
-    "* angle : radians\n",
-    "* axe : axe de rotation (liste de taille 3)\n",
-    "* pos : point à faire tourner (liste de taille 3)\n",
-    "       \n",
-    "Paramètres de sortie :       \n",
-    "* la position tournée (liste de taille 3)      \n",
-    "       \n",
-    "       \n",
-    "       \n",
-    "2: Ecrivez une fonction qui effectue une rotation 2D d'une position à l'aide d'une représentation complexe.\n",
+    " * *utils*: contient les fonctions *c* et *s*\n",
     "\n",
-    "Paramètres d'entrée:\n",
+    " * *linspace*: contient la fonction *linspace*\n",
     "\n",
-    "* angle: radians\n",
-    "* pos : point à faire tourner (liste de taille 2)\n",
-    "       \n",
-    "Paramètres de sortie :       \n",
     "\n",
-    "* la position tournée (liste de taille 2)\n"
+    "\n",
+    " 2: A l'intérieur du package *maBiblio* créez le package *ellipsoides* qui contient deux modules: *superellipse* et *superellipsoid*. Chacun de ces modules contient la fonction correspondante définie dans le TP1.\n",
+    "\n",
+    "\n",
+    "Les fichiers *\\__init__.py* des packages doivent importer les fonctions de leurs packages. \n",
+    "\n",
+    "   \n",
+    " 3: Créez le repertoire *demos* qui contient deux scripts *quaternion.py*  et *superellipsoid.py* qui importent le package *maBiblio* et appellent ses fonctions: \n",
+    " \n",
+    " * *quaternion.py*: une rotation à l'aide d'une représentation complexe et une rotation à  l'aide d'une représentation quaternion\n",
+    " \n",
+    " * *superellipsoid.py*: affiche des coordonnées d'une superellipse et celles d'une superellipsoid\n",
+    "\n"
    ]
   }
  ],
