--- a/python/session-2016-03-idf/2_modules/exercices/synope_session_2016_03_idf-TP2.ipynb
+++ b/python/session-2016-03-idf/2_modules/exercices/synope_session_2016_03_idf-TP2.ipynb
@@ -101,6 +101,11 @@
     " * *quaternion.py*: une rotation à l'aide d'une représentation complexe et une rotation à  l'aide d'une représentation quaternion\n",
     " \n",
     " * *superellipsoid.py*: affiche des coordonnées d'une superellipse et celles d'une superellipsoid\n",
+    "\n",
+    "\n",
+    " 4: Créez le fichier *setup.py* qui définit les modules *maBiblio* et *maBiblio.ellipsoides*\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
